--- a/index.html
+++ b/index.html
@@ -52,5 +52,6 @@
 			crossorigin="anonymous"
 		></script>
 		<script src="js/app.js"></script>
+		<script src="js/test.js"></script>
 	</body>
 </html>
