modal added and pricing list added

--- a/index.html
+++ b/index.html
@@ -44,6 +44,75 @@
 					></div>
 				</div>
 			</section>
+			<section id="modal-container">
+				<!-- Button trigger modal -->
+				<!-- <button
+					type="button"
+					class="btn btn-primary"
+					data-bs-toggle="modal"
+					data-bs-target="#btn-feature-modal"
+				></button> -->
+
+				<!-- Modal -->
+
+				<div
+					class="modal fade"
+					id="btn-feature-modal"
+					tabindex="-1"
+					aria-labelledby="featureModalLabel"
+					aria-hidden="true"
+				>
+					<div
+						class="modal-dialog modal-dialog-centered modal-xl position-relative"
+					>
+						<div class="modal-content">
+							<button
+								type="button"
+								class="btn-close position-absolute top-0 start-100 translate-middle bg-danger rounded-circle"
+								data-bs-dismiss="modal"
+								aria-label="Close"
+							></button>
+
+							<div
+								id="feature-body"
+								class="modal-body d-flex justify-content-between w-75 mx-auto h-75"
+							>
+								<!-- info card -->
+								<div>
+									<h4 id="card-description">Info Heading bold</h4>
+									<!-- subscription plan cards -->
+
+									<div
+										id="pricing-container"
+										class="d-flex gap-3 justify-content-between"
+									>
+										<div class="pricing-data"></div>
+										<div class="pricing-data"></div>
+										<div class="pricing-data"></div>
+									</div>
+									<!-- feature and integration part -->
+									<div class="d-flex justify-content-between">
+										<div>features</div>
+										<div>integration</div>
+									</div>
+								</div>
+								<!-- image card -->
+								<div>
+									<div class="card" style="width: 18rem">
+										<img src="..." class="card-img-top" alt="..." />
+										<div class="card-body">
+											<p class="card-text">
+												Some quick example text to build on the card title and
+												make up the bulk of the card's content.
+											</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 
 		<script
