modal integrate list added

--- a/index.html
+++ b/index.html
@@ -73,38 +73,45 @@
 								aria-label="Close"
 							></button>
 
-							<div
-								id="feature-body"
-								class="modal-body d-flex justify-content-between w-75 mx-auto h-75"
-							>
-								<!-- info card -->
-								<div>
-									<h4 id="card-description">Info Heading bold</h4>
-									<!-- subscription plan cards -->
+							<div id="feature-body" class="modal-body row">
+								<div class="container p-5 col-sm-6 mb-3 mb-sm-0">
+									<!-- info card -->
+									<div class="card">
+										<h4 id="card-description">Info Heading bold</h4>
+										<!-- subscription plan cards -->
 
-									<div
-										id="pricing-container"
-										class="d-flex gap-3 justify-content-between"
-									>
-										<div class="pricing-data"></div>
-										<div class="pricing-data"></div>
-										<div class="pricing-data"></div>
-									</div>
-									<!-- feature and integration part -->
-									<div class="d-flex justify-content-between">
-										<div>features</div>
-										<div>integration</div>
+										<div
+											id="pricing-container"
+											class="d-flex gap-3 justify-content-between"
+										>
+											<div class="pricing-data"></div>
+											<div class="pricing-data"></div>
+											<div class="pricing-data"></div>
+										</div>
+										<!-- feature and integration part -->
+										<div class="d-flex justify-content-between">
+											<div>
+												<h4>Features</h4>
+												<ul id="modal-features"></ul>
+											</div>
+											<div>
+												<h4>Integration</h4>
+												<ul id="modal-integration"></ul>
+											</div>
+										</div>
 									</div>
 								</div>
 								<!-- image card -->
-								<div>
-									<div class="card" style="width: 18rem">
-										<img src="..." class="card-img-top" alt="..." />
-										<div class="card-body">
-											<p class="card-text">
-												Some quick example text to build on the card title and
-												make up the bulk of the card's content.
-											</p>
+								<div class="col-sm-6">
+									<div class="card">
+										<div class="" style="width: 18rem">
+											<img src="..." class="card-img-top" alt="..." />
+											<div class="card-body">
+												<p class="card-text">
+													Some quick example text to build on the card title and
+													make up the bulk of the card's content.
+												</p>
+											</div>
 										</div>
 									</div>
 								</div>
