--- a/index.html
+++ b/index.html
@@ -103,17 +103,7 @@
 								</div>
 								<!-- image card -->
 								<div class="col-sm-6">
-									<div class="card">
-										<div class="" style="width: 18rem">
-											<img src="..." class="card-img-top" alt="..." />
-											<div class="card-body">
-												<p class="card-text">
-													Some quick example text to build on the card title and
-													make up the bulk of the card's content.
-												</p>
-											</div>
-										</div>
-									</div>
+									<div id="modal-image-container" class="card"></div>
 								</div>
 							</div>
 						</div>
