fixed bug on see more btn and added hide after loading option

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	</head>
 	<body onload="loadData()">
 		<header class="container text-center my-5">
-			<h1>Hello, world!</h1>
+			<h1>AI Universe Hub</h1>
 			<button id="btn-sort" type="button" class="btn btn-success">
 				Sort By Date
 			</button>
@@ -36,12 +36,15 @@
 		<main>
 			<!-- dynamic data section -->
 			<section id="dynamic-data-section" class="container">
-				<div class="data-container">
+				<div class="data-container m-2">
 					<!-- dynamic data will be here -->
 					<div
 						id="data-container"
 						class="row row-cols-1 row-cols-md-3 g-4"
 					></div>
+				</div>
+				<div id="see-more" class="text-center mb-5 mt-3">
+					<div id="btn-see-more" class="btn btn-success">See More</div>
 				</div>
 			</section>
 			<section id="modal-container">
