--- a/index.html
+++ b/index.html
@@ -76,23 +76,29 @@
 								aria-label="Close"
 							></button>
 
-							<div id="feature-body" class="modal-body row">
-								<div class="container p-5 col-sm-6 mb-3 mb-sm-0">
+							<div id="feature-body" class="modal-body row p-5">
+								<div class="container card col-sm-6">
 									<!-- info card -->
-									<div class="card">
-										<h4 id="card-description">Info Heading bold</h4>
+									<div class="">
+										<h4 id="card-description" class="p-3 fw-bold"></h4>
 										<!-- subscription plan cards -->
 
 										<div
 											id="pricing-container"
-											class="d-flex gap-3 justify-content-between"
+											class="d-flex justify-content-between mx-3"
 										>
-											<div class="pricing-data"></div>
-											<div class="pricing-data"></div>
-											<div class="pricing-data"></div>
+											<div
+												class="pricing-data border py-2 px-3 rounded fw-semibold"
+											></div>
+											<div
+												class="pricing-data border py-2 px-3 rounded fw-semibold"
+											></div>
+											<div
+												class="pricing-data border py-2 px-3 rounded fw-semibold"
+											></div>
 										</div>
 										<!-- feature and integration part -->
-										<div class="d-flex justify-content-between">
+										<div class="d-flex justify-content-between p-3">
 											<div>
 												<h4>Features</h4>
 												<ul id="modal-features"></ul>
@@ -105,7 +111,7 @@
 									</div>
 								</div>
 								<!-- image card -->
-								<div class="col-sm-6">
+								<div class="container col-sm-6">
 									<div id="modal-image-container" class="card"></div>
 								</div>
 							</div>
