--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
 					<div id="btn-see-more" class="btn btn-success">See More</div>
 				</div>
 			</section>
+			<!-- loader -->
+			<section id="loader" class="d-none">
+				<div
+					style="height: 400px"
+					class="d-flex justify-content-center align-items-center"
+				>
+					<div class="spinner-border text-success" role="status">
+						<span class="visually-hidden">Loading...</span>
+					</div>
+				</div>
+			</section>
 			<section id="modal-container">
 				<!-- Button trigger modal -->
 				<!-- <button
@@ -70,8 +81,9 @@
 					>
 						<div class="modal-content">
 							<button
+								id="btn-modal-close"
 								type="button"
-								class="btn-close position-absolute top-0 start-100 translate-middle bg-danger rounded-circle"
+								class="btn-close position-absolute top-0 start-100 translate-middle rounded-circle"
 								data-bs-dismiss="modal"
 								aria-label="Close"
 							></button>
